--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "dotenv": "^16.4.5",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-static": "^1.2.6",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "node": "^20.13.0",
